use static lxml

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 extensions = 
 parts = 
+    lxml
     instance
 extends =
     http://good-py.appspot.com/release/dexterity/1.2?plone=4.2rc2
@@ -19,6 +20,10 @@ http-address = 8080
 
 [versions]
 docutils = 0.9.1
+
+[lxml]
+recipe = z3c.recipe.staticlxml
+egg = lxml
 
 [instance]
 recipe = plone.recipe.zope2instance
