--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,6 @@
 [buildout]
 extensions = 
 parts = 
-#    lxml
     instance
 extends =
     http://good-py.appspot.com/release/dexterity/1.2?plone=4.2rc2
@@ -21,16 +20,13 @@ http-address = 8080
 [versions]
 docutils = 0.9.1
 
-#[lxml]
-#recipe = z3c.recipe.staticlxml
-#egg = lxml
-#
 [instance]
 recipe = plone.recipe.zope2instance
 eggs = 
     Plone
     Pillow
     plone.app.dexterity
+    Products.PloneHotfix20121106
 http-address = ${buildout:http-address}
 user = admin:OpenShiftAdmin
 effective-user = ${buildout:effective-user}
