Add calendar, content well portlets and kuputabs

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -27,6 +27,11 @@ eggs =
     Pillow
     plone.app.dexterity
     Products.PloneHotfix20121106
+    collective.kuputabs
+    eea.facetednavigation
+    Solgema.fullcalendar
+    Products.ContentWellPortlets
+
 http-address = ${buildout:http-address}
 user = admin:OpenShiftAdmin
 effective-user = ${buildout:effective-user}
