Add leadimage and kuputabs zcml

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -31,6 +31,10 @@ eggs =
     eea.facetednavigation
     Solgema.fullcalendar
     Products.ContentWellPortlets
+    collective.contentleadimage
+
+zcml =
+    collective.kuputabs
 
 http-address = ${buildout:http-address}
 user = admin:OpenShiftAdmin
