Add atreal.preview for import of files from KSP

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -32,6 +32,7 @@ eggs =
     Solgema.fullcalendar
     Products.ContentWellPortlets
     collective.contentleadimage
+    atreal.richfile.preview
 
 zcml =
     collective.kuputabs
