Add carousell, document viewer.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -32,7 +32,8 @@ eggs =
     Solgema.fullcalendar
     Products.ContentWellPortlets
     collective.contentleadimage
-    atreal.richfile.preview
+    collective.documentviewer
+    collective.carousel
 
 zcml =
     collective.kuputabs
