Update Debian installation README.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,8 +3,15 @@ extensions =
 parts = 
     instance
 extends =
-    http://good-py.appspot.com/release/dexterity/1.2?plone=4.2rc2
-    http://dist.plone.org/release/4.2.1/versions.cfg
+    http://dist.plone.org/release/4.2.4/versions.cfg
+
+
+find-links =
+        ${buildout:directory}/eggs_repo
+        http://dist.plone.org
+
+download-cache = downloads
+download-directory = ${buildout:download-cache}
 
 versions = versions
 
@@ -26,7 +33,6 @@ eggs =
     Plone
     Pillow
     plone.app.dexterity
-    Products.PloneHotfix20121106
     collective.kuputabs
     eea.facetednavigation
     Solgema.fullcalendar
@@ -44,6 +50,7 @@ effective-user = ${buildout:effective-user}
 
 environment-vars = 
     PYTHON_EGG_CACHE ${buildout:pyeggcache-directory}
+    PATH /var/lib/gems/1.8/gems/docsplit-0.7.2/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 zodb-cache-size = 300
 event-log = ${buildout:log-directory}/${:_buildout_section_name_}.log
