Add in mr.developer dev sources. Fixes #1

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,7 +5,6 @@ parts =
 extends =
     http://dist.plone.org/release/4.2.4/versions.cfg
 
-
 find-links =
         ${buildout:directory}/eggs_repo
         http://dist.plone.org
@@ -14,6 +13,16 @@ download-cache = downloads
 download-directory = ${buildout:download-cache}
 
 versions = versions
+
+extensions = mr.developer 
+sources = sources
+sources-dir = dev
+auto-checkout = 
+    reddplusid.mcpolicy
+    reddplusid.mission
+    reddplusid.missionreport
+    reddplusid.mctheme
+
 
 # ============================================== Start
 # These settings will be overridden with OpenShift's environment variables
@@ -24,6 +33,16 @@ pyeggcache-directory = ${buildout:directory}/var/egg-cache
 http-address = 8080
 # ================================================ End
 
+[sources]
+reddplusid.mcpolicy=git https://github.com/reddplusid/reddplusid.mcpolicy.git
+reddplusid.missionreport=git https://github.com/reddplusid/reddplusid.missionreport.git
+reddplusid.mission=git https://github.com/reddplusid/reddplusid.mission.git
+reddplusid.mctheme=git https://github.com/reddplusid/reddplusid.mctheme.git
+
+
+
+
+
 [versions]
 docutils = 0.9.1
 
@@ -32,21 +51,14 @@ recipe = plone.recipe.zope2instance
 eggs = 
     Plone
     Pillow
-    plone.app.dexterity
     collective.kuputabs
-    eea.facetednavigation
-    Solgema.fullcalendar
-    Products.ContentWellPortlets
-    collective.contentleadimage
-    collective.documentviewer
-    collective.carousel
 
 zcml =
     collective.kuputabs
 
 http-address = ${buildout:http-address}
-user = admin:OpenShiftAdmin
-effective-user = ${buildout:effective-user}
+user = admin:admin
+effective-user = 
 
 environment-vars = 
     PYTHON_EGG_CACHE ${buildout:pyeggcache-directory}
