Add varnish caching service to buildout. Fixes #6 Add zeo setup for deployment configuration. Fixes #5

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,8 +9,8 @@ find-links =
         ${buildout:directory}/eggs_repo
         http://dist.plone.org
 
-download-cache = downloads
-download-directory = ${buildout:download-cache}
+#download-cache = downloads
+#download-directory = ${buildout:download-cache}
 
 versions = versions
 
@@ -38,10 +38,6 @@ reddplusid.mcpolicy=git https://github.com/reddplusid/reddplusid.mcpolicy.git
 reddplusid.missionreport=git https://github.com/reddplusid/reddplusid.missionreport.git
 reddplusid.mission=git https://github.com/reddplusid/reddplusid.mission.git
 reddplusid.mctheme=git https://github.com/reddplusid/reddplusid.mctheme.git
-
-
-
-
 
 [versions]
 docutils = 0.9.1
