Add plone async support to buildout setup re #7

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -1,16 +1,71 @@
 [buildout]
+extends = buildout.cfg
+
 effective-user =
 
 parts +=
+    worker
     zeo
     varnish
     varnish-build
 
 [instance]
+zodb-cache-size = 3000
+zeo-client-cache-size = 512MB
+
+zcml-additional = 
+        <include package="plone.app.async" file="multi_db_instance.zcml" />
+
+environment-vars +=
+    ZC_ASYNC_UUID ${buildout:directory}/var/${:_buildout_section_name_}-uuid.txt
+
+zope-conf-additional +=
+    <product-config zc.z3monitor>
+        port 1${:http-address}
+    </product-config>
+
+    <zodb_db async>
+        cache-size ${instance:zodb-cache-size}
+        <zeoclient>
+            server ${zeo:zeo-address}
+            storage 2
+            name asyncstorage
+            blob-dir ${zeo:blob-storage}
+            shared-blob-dir on
+            var ${buildout:parts-directory}/${:_buildout_section_name_}/var
+            cache-size ${instance:zeo-client-cache-size}
+        </zeoclient>
+        mount-point /zasync
+    </zodb_db>
+
+
 zeo-client = True
 zeo-address = ${zeo:zeo-address}
 blob-storage = ${zeo:blob-storage}
 shared-blob = on
+
+[worker]
+<= instance
+http-address = 8090
+zodb-cache-size = 3000
+zeo-client-cache-size = 512MB
+
+zcml-additional =
+    <include package="plone.app.async" file="multi_db_worker.zcml" />
+zope-conf-additional +=
+    <zodb_db async>
+        cache-size ${worker:zodb-cache-size}
+        <zeoclient>
+            server ${zeo:zeo-address}
+            storage 2
+            name asyncstorage
+            blob-dir ${zeo:blob-storage}
+            shared-blob-dir on
+            var ${buildout:parts-directory}/worker/var
+            cache-size ${worker:zeo-client-cache-size}
+        </zeoclient>
+        mount-point /zasync
+    </zodb_db>
 
 [zeo]
 recipe = plone.recipe.zeoserver
@@ -21,9 +76,14 @@ eggs =
     plone.recipe.zeoserver
     plone.app.blob
 
+zeo-conf-additional =
+    <filestorage 2>
+        path ${buildout:directory}/var/filestorage/Async.fs
+    </filestorage>
+
 [varnish-build]
 recipe = zc.recipe.cmmi
-url = http://repo.varnish-cache.org/source/varnish-2.1.5.tar.gz
+url = http://repo.varnish-cache.org/source/varnish-3.0.3.tar.gz
 
 [varnish]
 recipe = plone.recipe.varnish
