--- a/buildout.cfg
+++ b/buildout.cfg
@@ -48,6 +48,8 @@ eggs =
     Plone
     Pillow
     collective.kuputabs
+    plone.app.async
+    reddplusid.mcpolicy
 
 zcml =
     collective.kuputabs
@@ -60,7 +62,6 @@ environment-vars =
     PYTHON_EGG_CACHE ${buildout:pyeggcache-directory}
     PATH /var/lib/gems/1.8/gems/docsplit-0.7.2/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
-zodb-cache-size = 300
 event-log = ${buildout:log-directory}/${:_buildout_section_name_}.log
 z2-log = ${buildout:log-directory}/${:_buildout_section_name_}-Z2.log
 file-storage = ${buildout:data-directory}/filestorage/Data.fs
