Fix varnish version to 2.1.5

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -83,6 +83,8 @@ zeo-conf-additional =
 
 [varnish-build]
 recipe = zc.recipe.cmmi
+url = http://repo.varnish-cache.org/source/varnish-2.1.5.tar.gz
+
 
 [varnish]
 recipe = plone.recipe.varnish
