Don't add environment vars now, += does not always add additional envieronments. Define all variables in deployment.cfg too.

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -16,7 +16,9 @@ zeo-client-cache-size = 512MB
 zcml-additional = 
         <include package="plone.app.async" file="multi_db_instance.zcml" />
 
-environment-vars +=
+environment-vars =
+    PYTHON_EGG_CACHE ${buildout:pyeggcache-directory}
+    PATH /var/lib/gems/1.8/gems/docsplit-0.7.2/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
     ZC_ASYNC_UUID ${buildout:directory}/var/${:_buildout_section_name_}-uuid.txt
 
 zope-conf-additional +=
