Fix effective user definitions.

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -1,7 +1,7 @@
 [buildout]
 extends = buildout.cfg
 
-effective-user =
+effective-user = 
 
 parts +=
     worker
@@ -10,6 +10,7 @@ parts +=
     varnish-build
 
 [instance]
+effective-user = ${buildout:effective-user}
 zodb-cache-size = 3000
 zeo-client-cache-size = 512MB
 
@@ -70,6 +71,7 @@ zope-conf-additional +=
     </zodb_db>
 
 [zeo]
+effective-user = ${buildout:effective-user}
 recipe = plone.recipe.zeoserver
 zeo-address = 127.0.0.1:8100
 zeo-var = ${buildout:directory}/var
