Add FeedFeeder (RSS News feeds), video player and gallery support.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,10 +9,16 @@ find-links =
         ${buildout:directory}/eggs_repo
         http://dist.plone.org
 
+#Uncomment the following and set a directory to cache downloaded
+#files.
+
 #download-cache = downloads
 #download-directory = ${buildout:download-cache}
 
 versions = versions
+
+# This section checkouts development code into dev directory
+# of buildout. 
 
 extensions = mr.developer 
 sources = sources
@@ -22,7 +28,6 @@ auto-checkout =
     reddplusid.mission
     reddplusid.missionreport
     reddplusid.mctheme
-
 
 # ============================================== Start
 # These settings will be overridden with OpenShift's environment variables
