lock jqueryui to 1.8.16.9

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,7 @@ parts =
     instance
 extends =
     http://dist.plone.org/release/4.2.4/versions.cfg
+    versions.cfg
 
 find-links =
         ${buildout:directory}/eggs_repo
