--- a/versions.cfg
+++ b/versions.cfg
@@ -1,2 +1,50 @@
 [versions]
 collective.js.jqueryui = 1.8.16.9
+BTrees = 4.0.5
+BeautifulSoup = 3.2.1
+Pillow = 1.7.8
+Products.ContentWellPortlets = 4.2.1
+Products.feedfeeder = 2.1
+Solgema.ContextualContentMenu = 0.1
+Solgema.fullcalendar = 2.1.2
+Twisted = 12.3.0
+ZODB = 4.0.0a4
+collective.carousel = 1.5
+collective.contentleadimage = 1.3.4
+collective.documentviewer = 2.2.1
+collective.flowplayer = 3.1.2
+collective.grok = 1.0a2
+collective.js.colorpicker = 1.0
+collective.js.fullcalendar = 1.5.2.2
+collective.kuputabs = 0.1
+collective.plonetruegallery = 3.2a1
+collective.portlet.usertrack = 1.0
+collective.ptg.galleria = 1.2.1
+collective.quickupload = 1.5.8
+collective.z3cform.widgets = 1.0b3
+eea.faceted.vocabularies = 4.3
+eea.facetednavigation = 5.5
+eea.jquery = 6.4
+feedparser = 5.1.3
+hachoir-core = 1.3.3
+hachoir-metadata = 1.3.3
+hachoir-parser = 1.3.4
+mock = 1.0.1
+p01.util = 0.5.0
+p01.vocabulary.country = 0.5.0
+persistent = 4.0.6
+plone.app.async = 1.6
+plone.principalsource = 1.0b1
+plone.validatehook = 1.0
+repoze.catalog = 0.8.2
+uuid = 1.30
+zc.async = 1.5.4
+zc.blist = 1.0b2
+zc.dict = 1.3b1
+zc.monitor = 0.3.1
+zc.ngi = 2.0.1
+zc.queue = 2.0.0a1
+zc.twist = 1.3.1
+zc.z3monitor = 0.8.0
+zope.bforest = 1.2
+
