added reddplusid.attachments into buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -29,6 +29,7 @@ auto-checkout =
     reddplusid.mission
     reddplusid.missionreport
     reddplusid.mctheme
+    reddplusid.attachments
 
 # ============================================== Start
 # These settings will be overridden with OpenShift's environment variables
@@ -44,6 +45,7 @@ reddplusid.mcpolicy=git https://github.com/reddplusid/reddplusid.mcpolicy.git
 reddplusid.missionreport=git https://github.com/reddplusid/reddplusid.missionreport.git
 reddplusid.mission=git https://github.com/reddplusid/reddplusid.mission.git
 reddplusid.mctheme=git https://github.com/reddplusid/reddplusid.mctheme.git
+reddplusid.attachments=git https://github.com/reddplusid/reddplusid.attachments.git
 
 [versions]
 docutils = 0.9.1
