Pin Products.ExternalEditor to 1.1.0 for collective.externaleditor. re #43

--- a/versions.cfg
+++ b/versions.cfg
@@ -4,6 +4,7 @@ BTrees = 4.0.5
 BeautifulSoup = 3.2.1
 Pillow = 1.7.8
 Products.ContentWellPortlets = 4.2.1
+Products.ExternalEditor = 1.1.0
 Products.feedfeeder = 2.1
 Solgema.ContextualContentMenu = 0.1
 Solgema.fullcalendar = 2.1.2
