Add additional instance and varnish load balancing.

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -14,6 +14,7 @@ effective-user = ${buildout:effective-user}
 zodb-cache-size = 3000
 zeo-client-cache-size = 512MB
 
+
 zcml-additional = 
         <include package="plone.app.async" file="multi_db_instance.zcml" />
 
@@ -46,6 +47,12 @@ zeo-client = True
 zeo-address = ${zeo:zeo-address}
 blob-storage = ${zeo:blob-storage}
 shared-blob = on
+
+[instance2]
+<= instance1
+
+http-address = 8081
+
 
 [worker]
 <= instance
@@ -93,6 +100,9 @@ url = http://repo.varnish-cache.org/source/varnish-2.1.5.tar.gz
 [varnish]
 recipe = plone.recipe.varnish
 daemon = ${buildout:parts-directory}/varnish-build/sbin/varnishd
-bind = 127.0.0.1:80
+bind = :80
+balancer = random
 backends = 127.0.0.1:8080
+           127.0.0.1:8081
+
 cache-size = 256M
