Add debug instance to troubleshoot live site without disturbing other instances.

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -6,6 +6,7 @@ effective-user =
 parts +=
     worker
     zeo
+    debug
     varnish
     varnish-build
 
@@ -53,6 +54,10 @@ shared-blob = on
 
 http-address = 8081
 
+[debug]
+<= instance1
+
+http-address = 8089
 
 [worker]
 <= instance
