Add instance2 to buildout and make sure reference to instance and not instance1

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -6,6 +6,7 @@ effective-user =
 parts +=
     worker
     zeo
+    instance2
     debug
     varnish
     varnish-build
@@ -50,12 +51,12 @@ blob-storage = ${zeo:blob-storage}
 shared-blob = on
 
 [instance2]
-<= instance1
+<= instance
 
 http-address = 8081
 
 [debug]
-<= instance1
+<= instance
 
 http-address = 8089
 
