add reddplusid.registration into buildout (re #50)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,6 +30,7 @@ auto-checkout =
     reddplusid.missionreport
     reddplusid.mctheme
     reddplusid.attachments
+    reddplusid.registration
 
 # ============================================== Start
 # These settings will be overridden with OpenShift's environment variables
@@ -46,6 +47,7 @@ reddplusid.missionreport=git https://github.com/reddplusid/reddplusid.missionrep
 reddplusid.mission=git https://github.com/reddplusid/reddplusid.mission.git
 reddplusid.mctheme=git https://github.com/reddplusid/reddplusid.mctheme.git
 reddplusid.attachments=git https://github.com/reddplusid/reddplusid.attachments.git
+reddplusid.registration=git https://github.com/reddplusid/reddplusid.registration.git
 
 [versions]
 docutils = 0.9.1
