added reddplusid.locales into buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -31,6 +31,7 @@ auto-checkout =
     reddplusid.mctheme
     reddplusid.attachments
     reddplusid.registration
+    reddplusid.locales
 
 # ============================================== Start
 # These settings will be overridden with OpenShift's environment variables
@@ -48,6 +49,7 @@ reddplusid.mission=git https://github.com/reddplusid/reddplusid.mission.git
 reddplusid.mctheme=git https://github.com/reddplusid/reddplusid.mctheme.git
 reddplusid.attachments=git https://github.com/reddplusid/reddplusid.attachments.git
 reddplusid.registration=git https://github.com/reddplusid/reddplusid.registration.git
+reddplusid.locales=git https://github.com/reddplusid/reddplusid.locales.git
 
 [versions]
 docutils = 0.9.1
@@ -62,6 +64,7 @@ eggs =
     reddplusid.mcpolicy
 
 zcml =
+    reddplusid.locales
     collective.kuputabs
 
 http-address = ${buildout:http-address}
