Add clockserver to update feeds once a day.

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -83,6 +83,14 @@ zope-conf-additional +=
         mount-point /zasync
     </zodb_db>
 
+<clock-server>
+  method /mc/feed-mega-update
+  period 86400 # seconds
+  user admin
+  password 123
+  host localhost:8090
+</clock-server>
+
 [zeo]
 effective-user = ${buildout:effective-user}
 recipe = plone.recipe.zeoserver
