Update boostrap, hotfix Products.PloneHotfix20131210

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -62,6 +62,7 @@ eggs =
     collective.kuputabs
     plone.app.async
     reddplusid.mcpolicy
+    Products.PloneHotfix20131210
 
 zcml =
     reddplusid.locales
